2004-10-09  Bruno Haible  <bruno@clisp.org>

	* clos-print.lisp (print-object): Return the object as value of all
	methods, as required by ANSI CL.
	* condition.lisp (print-object@simple-condition, print-object@restart):
	Return the object after printing it.

2004-10-09  Bruno Haible  <bruno@clisp.org>

	* clos-slotdef1.lisp (print-object-<slot-definition>): New function,
	taken from clos-print.lisp.
	* clos-specializer1.lisp (print-object-<eql-specializer>): Likewise.
	* clos-class1.lisp (print-object-<class>): Likewise.
	* clos-print.lisp (print-object): Use print-object-<slot-definition>,
	print-object-<eql-specializer>, print-object-<class>.

2004-10-09  Bruno Haible  <bruno@clisp.org>

	Move code.
	* init.lisp (print-unreadable-object): Export it here.
	* macros2.lisp (print-unreadable-object): Moved to here.
	* defs2.lisp (print-unreadable-object): Remove from here.

2004-10-09  Bruno Haible  <bruno@clisp.org>

	Forbid change-class for <class>, <slot-definition>.
	* clos-class5.lisp (update-instance-for-different-class): Add error
	signalling methods for <class>, <slot-definition>.

2004-10-11  Sam Steingold  <sds@gnu.org>

	* misc.d (MODULE-INFO): return the DLL information for :FFI
	argument (instead of 0); all info when VERBOSE, names only otherwise
	* constsym (:FII) [DYNAMIC_FFI & (WIN32_NATIVE | HAVE_DLOPEN)]: added
	Suggested by Jörg Höhle

2004-10-10  Bruno Haible  <bruno@clisp.org>

	* control.d (parse_doc_decl): Fix GC-safety bug introduced on
	2004-05-27.
	* hashtabl.d (warn_forced_gc_rehash): Fix GC-safety bug introduced on
	2004-05-15.
	(warn_key_forces_gc_rehash): Fix GC-safety bug introduced on
	2004-05-12.

2004-10-10  Bruno Haible  <bruno@clisp.org>

	* .gdbinit: Don't always execute the "base" command. It made it
	impossible to attach to an already running lisp.run process.

2004-10-10  Bruno Haible  <bruno@clisp.org>

	Fix GC crash after a GC was triggered while a break loop was active.